2022-03-08  Adrian Perez de Castro  <aperez@igalia.com> and Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Web Inspector: make it possible to use the remote inspector from other browsers
        https://bugs.webkit.org/show_bug.cgi?id=237601

        Reviewed by Michael Catanzaro.

        Add Base/BrowserInspectorFrontendHost.js to be used when inspector is run and InspectorFrontendHost is not
        defined in window. This new file is only included in the inspector sources for GTK and WPE ports.

        * CMakeLists.txt:
        * PlatformWPE: Added
        * PlatformGTK:
        * Scripts/combine-resources.pl: Add --input-script-name to be able to skip individual scripts too.
        * Scripts/copy-user-interface-resources.pl: If inspector frontend host should not be included, remove the script
        from generated files.
        * UserInterface/Base/BrowserInspectorFrontendHost.js: Added.
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get supportsShowCertificate):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get isRemote):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get inspectionLevel):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get debuggableInfo):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get port):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get platform):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get platformVersionName):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get supportsDiagnosticLogging):
        (window.InspectorFrontendHost.WI.BrowserInspectorFrontendHost.prototype.get supportsWebExtensions):