@@ -1,3 +1,13 @@
+2020-03-22  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: Uncaught Exception: Right side of assignment cannot be destructured (at QuickConsole.js:358:30)
+        https://bugs.webkit.org/show_bug.cgi?id=209388
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/QuickConsole.js:
+        (WI.QuickConsole.prototype._handleFramePageExecutionContextChanged):
+
 2022-03-08  Adrian Perez de Castro  <aperez@igalia.com> and Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][WPE] Web Inspector: make it possible to use the remote inspector from other browsers
